// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FileInput.vue > renders OXD FileInput 1`] = `
"<input data-v-1b4b6e0f="" type="file" class="oxd-file-input">
<div data-v-1b4b6e0f="" class="oxd-file-div oxd-file-div--active">
  <!--v-if-->
  <div data-v-1b4b6e0f="" class="oxd-file-input-div">No file chosen</div><i data-v-85cde8ca="" data-v-1b4b6e0f="" class="oxd-icon bi-upload oxd-file-input-icon"></i>
</div>"
`;

exports[`FileInput.vue > should renders OXD FileInput with browse button 1`] = `
"<input data-v-1b4b6e0f="" type="file" class="oxd-file-input">
<div data-v-1b4b6e0f="" class="oxd-file-div oxd-file-div--active">
  <div data-v-1b4b6e0f="" class="oxd-file-button">Browse</div>
  <div data-v-1b4b6e0f="" class="oxd-file-input-div">No file chosen</div><i data-v-85cde8ca="" data-v-1b4b6e0f="" class="oxd-icon bi-upload oxd-file-input-icon"></i>
</div>"
`;

exports[`FileInput.vue > should renders OXD FileInput with custom color 1`] = `
"<input data-v-1b4b6e0f="" type="file" class="oxd-file-input">
<div data-v-1b4b6e0f="" class="oxd-file-div oxd-file-div--active" style="background-color: aliceblue;">
  <!--v-if-->
  <div data-v-1b4b6e0f="" class="oxd-file-input-div">No file chosen</div><i data-v-85cde8ca="" data-v-1b4b6e0f="" class="oxd-icon bi-upload oxd-file-input-icon"></i>
</div>"
`;

exports[`FileInput.vue > should renders OXD FileInput with error 1`] = `
"<input data-v-1b4b6e0f="" type="file" class="oxd-file-input">
<div data-v-1b4b6e0f="" class="oxd-file-div oxd-file-div--active oxd-file-div--error">
  <!--v-if-->
  <div data-v-1b4b6e0f="" class="oxd-file-input-div">No file chosen</div><i data-v-85cde8ca="" data-v-1b4b6e0f="" class="oxd-icon bi-upload oxd-file-input-icon"></i>
</div>"
`;
